--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,9 @@ body {
 nav.nav.nav--open {
   display: inline-flex;
 }
-
+.navCtas.mobile-cta {
+  display: none;
+}
 /* manu css */
 .page {
   min-height: 100vh;
