--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -362,6 +362,7 @@ video.hero__video {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 16px;
   margin-bottom: 30px;
 }
@@ -560,7 +561,6 @@ video.hero__video {
 
 .section-heading {
   color: #000;
-  text-align: center;
   font-family: "Bebas Neue";
   font-size: 70px;
   font-style: normal;
@@ -569,7 +569,7 @@ video.hero__video {
 }
 .section-dice {
   color: #000;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -579,7 +579,7 @@ video.hero__video {
 
 .small-text {
   color: var(--Primary-Neon-Red, #ff073a);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 15px;
   font-style: normal;
   font-weight: 350;
@@ -611,7 +611,7 @@ video.hero__video {
 .that-matters p {
   margin: 0px;
   color: #000;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -687,7 +687,7 @@ img.simbl-icon {
 
 .player-name span {
   color: #fff;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -722,7 +722,7 @@ img.simbl-icon {
 
 .blog-box .blog-info p {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -803,7 +803,7 @@ img.simbl-icon {
   background: transparent;
   border-radius: 150px;
   border: 1px solid var(--Primary-Neon-Red, #ff073a);
-  padding: 22px 30px;
+  padding: 10px 30px;
   text-decoration: none;
 }
 footer {
@@ -869,7 +869,7 @@ footer {
   width: 100%;
   padding: 8px;
   color: var(--White, #fff);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -922,7 +922,7 @@ input::placeholder {
 .footer-right li a {
   margin-bottom: 8px;
   color: var(--White, #fff);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -937,7 +937,7 @@ input::placeholder {
   background: var(--Juggling-Club-Dark-Blue, #03202f);
   padding: 47px 0px;
   color: #fff;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 19px;
   font-style: normal;
   font-weight: 400;
@@ -972,7 +972,7 @@ input::placeholder {
   align-items: center;
   color: var(--Juggling-Club-Dark-Blue, #03202f);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -992,7 +992,7 @@ input::placeholder {
 
 .why-join-info h5 {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 20px;
   font-style: normal;
   font-weight: 800;
@@ -1002,7 +1002,7 @@ input::placeholder {
 
 .why-join-info p {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1019,6 +1019,8 @@ input::placeholder {
   .cta-box {
     flex-direction: column;
     text-align: center;
+    padding: 50px 30px;
+    margin: 0px 15px;
   }
 
   .cta-buttons {
@@ -1028,11 +1030,20 @@ input::placeholder {
 
   .footer-grid {
     grid-template-columns: 1fr;
+    gap: 0px;
   }
 
   .footer-right {
     flex-direction: column;
-    gap: 30px;
+    gap: 0;
+  }
+  .footer-left h3 {
+    font-size: 32px;
+    margin-bottom: 0px;
+  }
+  .copyright {
+    padding: 20px 0;
+    font-size: 15px;
   }
 }
 
@@ -1070,7 +1081,7 @@ input::placeholder {
 
 .player-profile h5 {
   color: #292824;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -1091,7 +1102,7 @@ input::placeholder {
 
 .player-quotes h4 {
   color: #292824;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 22px;
   font-style: normal;
   font-weight: 800;
@@ -1101,7 +1112,7 @@ input::placeholder {
 
 .player-quotes p {
   color: #292824;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -1128,7 +1139,7 @@ input::placeholder {
 .parent-testimonials p {
   color: var(--Base-Black, #23242a);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 30px;
   font-style: normal;
   font-weight: 500;
@@ -1162,7 +1173,7 @@ input::placeholder {
 
 .parent-testimonials .player-profile span {
   color: var(--Base-Black, #23242a);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -1196,7 +1207,7 @@ input::placeholder {
 .cta-info h3 {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 45px;
   font-style: normal;
   font-weight: 800;
@@ -1218,7 +1229,7 @@ input::placeholder {
 
 .club-staff-info p {
   color: #727272;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -1228,7 +1239,7 @@ input::placeholder {
 
 .club-staff-info h6 {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -1237,12 +1248,13 @@ input::placeholder {
 
 .club-staff-section .featureList .featureList-item h4 {
   color: #03202f;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   margin-bottom: 0px;
+  text-transform: capitalize;
 }
 .featureList .featureList-item .icon-box img {
   width: 28px;
@@ -1274,7 +1286,7 @@ input::placeholder {
 
 .club-staff-btm-sec .btm-sec-item h2 {
   color: var(--Black, #1d1d26);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
@@ -1294,7 +1306,7 @@ input::placeholder {
 
 .featureList .featureList-item p {
   color: #3d3d3d;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
@@ -1312,7 +1324,7 @@ input::placeholder {
 
 .price-box p {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 25px;
   font-style: normal;
   font-weight: 800;
@@ -1331,7 +1343,7 @@ input::placeholder {
 
 .price-box .price-text small {
   color: var(--Black, #1d1d26);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -1342,7 +1354,7 @@ input::placeholder {
 
 .price-box h6 {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 17.3px;
   font-style: normal;
   font-weight: 400;
@@ -1419,6 +1431,7 @@ input::placeholder {
   display: flex;
   justify-content: center;
   gap: 25px;
+  flex-wrap: wrap;
 }
 .coaches-parents {
   margin-bottom: 90px;
@@ -1445,7 +1458,7 @@ input::placeholder {
   align-items: center;
   gap: 10px;
   color: #000;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -1460,7 +1473,7 @@ input::placeholder {
 
 .celebrate-progress h2 {
   color: #000;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -1470,7 +1483,7 @@ input::placeholder {
 
 .celebrate-progress h2 span {
   color: var(--Primary-Neon-Red, #ff073a);
-  font-family: Avenir;
+  font-family: "Avenir";
 }
 
 .celebrate-progress {
@@ -1533,7 +1546,7 @@ input::placeholder {
   justify-content: center;
   color: var(--Primary-Badge-Blue, #0a5fff);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 24px;
   font-style: normal;
   font-weight: 800;
@@ -1545,7 +1558,7 @@ input::placeholder {
   color: var(--White, #fff);
   letter-spacing: -0.18px;
   border-left: 2px solid #ff073a;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
@@ -1589,7 +1602,7 @@ input::placeholder {
   bottom: 0;
   color: var(--Primary-Neon-Red, #ff073a);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
@@ -1606,11 +1619,12 @@ input::placeholder {
   justify-content: center;
   gap: 70px;
   margin: 50px 0px;
+  flex-wrap: wrap;
 }
 
 .links-actin a {
   color: var(--Primary-Badge-Blue, #0a5fff);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -1665,7 +1679,7 @@ input::placeholder {
 
 .means-info p {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -1680,7 +1694,7 @@ input::placeholder {
 
 .item-info-bx h3 {
   color: #292d34;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 20px;
   font-style: normal;
   font-weight: 800;
@@ -1690,7 +1704,7 @@ input::placeholder {
 
 .item-info-bx p {
   color: #292d34;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -1742,7 +1756,7 @@ input::placeholder {
 
 .price-features li {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -1755,7 +1769,7 @@ input::placeholder {
 .price-expl-text {
   color: var(--Juggling-Club-Dark-Blue, #03202f);
   text-align: center;
-  font-family: Avenir;
+  font-family: "Avenir";
   font-size: 17px;
   font-style: normal;
   font-weight: 350;
@@ -1771,7 +1785,239 @@ input::placeholder {
 }
 
 /* Mobile */
+@media (max-width: 767.99px) {
+  .featureList {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .cover {
+    object-fit: cover;
+    width: 100%;
+  }
+  .twoCol img.cover,
+  .mob-img-small {
+    width: 70%;
+    margin: 0 auto;
+    display: block;
+  }
+  .player-info {
+    left: 10px;
+    right: 10px;
+  }
+  .player-info .player-bio p {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+  .blog-box {
+    margin-bottom: 20px;
+  }
+  .blog-box .blog-info a img {
+    width: 32px;
+  }
+  .blog-box .blog-info h3 {
+    margin-bottom: 6px;
+    font-size: 28px;
+  }
+  .cta-content h2 {
+    font-size: 26px;
+    line-height: 1.2;
+  }
+  br {
+    display: none;
+  }
+  .scroll-wrapper {
+    display: none;
+  }
+  .rowBtns--left {
+    justify-content: center;
+  }
+  section.section .center.pt-5 {
+    padding-top: 1rem !important;
+  }
+  .that-matters {
+    width: 100%;
+    padding: 12px 20px;
+  }
+  .that-matters p {
+    font-size: 16px;
+    text-align: center;
+  }
+  .featureList .featureList-item h4 {
+    font-size: 20px;
+    line-height: normal;
+  }
+  .custom-swiper-prev img,
+  .custom-swiper-next img {
+    width: 32px;
+  }
+  .section.our-blog {
+    padding-bottom: 0;
+  }
+  .section {
+    padding: 20px 0px;
+  }
+  .why-join-info h2 {
+    font-size: 30px;
+  }
+  .why-join-info h5 {
+    font-size: 18px;
+  }
+  .why-join-info {
+    padding-right: 0;
+  }
+  .why-join-info p {
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+  }
+  .section.bg-color-rg {
+    border-radius: 0;
+    padding: 30px 0px;
+  }
+  .section.pricing-overview:after {
+    height: 100%;
+  }
+  .section.pricing-overview .section-heading {
+    margin-bottom: 20px !important;
+  }
+  .price-box {
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .price-box h6 {
+    margin-bottom: 20px;
+    font-size: 14.3px;
+    line-height: 27px;
+  }
+  .price-box p {
+    font-size: 20px;
+    margin-bottom: 0px;
+  }
+  .price-box .price-text {
+    margin-bottom: 10px;
+    font-size: 32px;
+  }
+  .enroll-section h2 {
+    font-size: 42px;
+  }
+  .enroll-section {
+    height: 360px;
+    max-height: 360px;
+  }
+  .coaches-parents h2 {
+    font-size: 32px;
+  }
+  .coaches-parents {
+    margin-bottom: 30px;
+  }
+  .bg-yellow-style-2 {
+    padding: 20px;
+  }
+  .bg-yellow-style-2 .offset-1.col-lg-6 {
+    margin-left: 0px;
+  }
+  .celebrate-progress h2 {
+    margin-top: 0 !important;
+    font-size: 16px !important;
+  }
+  .steps-section h2 {
+    font-size: 32px;
+    margin-bottom: 0px;
+  }
+  .steps-cta {
+    width: 100%;
+    font-size: 16px;
+  }
+  .links-actin {
+    gap: 10px;
+    margin: 20px 0px;
+  }
+  .links-actin a {
+    font-size: 16px;
+  }
+  .footer-right h4 {
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
+  .means-info h3 {
+    font-size: 24px;
+  }
+  .means-child-section .offset-1 {
+    margin: 0px;
+  }
+  .means-info p {
+    font-size: 16px;
+    margin-bottom: 0px;
+  }
+  .order-cms-2 {
+    order: 2;
+  }
+  .img-item .left-top {
+    top: -15px;
+    left: 0;
+    width: 50px;
+  }
+  .img-item .right-bottom {
+    position: absolute;
+    bottom: -15px;
+    right: 0;
+    width: 80px;
+  }
+  .item-info-bx {
+    gap: 10px;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+  }
+  .item-info-bx h3 {
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+  .parentstext-info {
+    padding-right: 20px;
+  }
+  .offset-1 {
+    margin: 0px;
+  }
+  .singl-pric-box {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .singl-pric-box:after {
+    height: 2px;
+    width: 80%;
+    position: absolute;
+    left: 50%;
+    top: 54%;
+    transform: translate(-50%, -50%);
+  }
+  .price-features {
+    text-align: left;
+  }
+}
 @media (max-width: 991px) {
+  .steps-line.desktop {
+    display: none;
+  }
+  .steps-row .step:first-child,
+  .steps-row .step:nth-child(2),
+  .steps-row .step:nth-child(23) {
+    margin-bottom: 20px;
+  }
+  .step {
+    z-index: 99;
+    position: relative;
+    margin: 20px 0px;
+  }
+  .steps-row {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .steps-section {
+    margin-bottom: 40px;
+    padding: 50px 0;
+  }
   .menu-toggle {
     display: block;
   }
@@ -1805,10 +2051,16 @@ input::placeholder {
   .brand .logo {
     width: 90px;
   }
-  .hero__title {
-    font-size: 42px;
+  .hero__title,
+  .inner-page .hero__title {
+    font-size: 32px;
     font-weight: 400;
     line-height: 1.4;
+    letter-spacing: 0;
+  }
+  .hero__subtitle {
+    margin: 15px 0;
+    font-size: 16px;
   }
   .nav {
     display: flex;
@@ -1816,10 +2068,82 @@ input::placeholder {
   .mobile-cta {
     display: block !important;
   }
-  .hero {
-    height: 600px;
+  .hero,
+  .inner-page .hero {
+    height: 460px;
+  }
+  img.hero__img {
+    object-fit: cover;
+    height: 100%;
   }
   .header__inner {
     align-items: baseline;
+  }
+  video.hero__video {
+    opacity: 0.75;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+  .section-heading,
+  .player-quotes .section-heading,
+  .parent-testimonials .section-heading {
+    font-size: 32px;
+    line-height: 1.2;
+  }
+  .darkHead {
+    margin-bottom: 20px;
+  }
+  .player-quotes h4 {
+    margin-bottom: 0;
+    font-size: 18px;
+  }
+  .player-quotes p {
+    font-size: 16px;
+  }
+  .section-dice {
+    font-size: 16px;
+  }
+  .cta-image {
+    margin-top: 30px;
+  }
+  .footer-grid-shape {
+    display: none;
+  }
+  .footer-left,
+  .footer-right {
+    padding: 50px 0 0px;
+  }
+  .player-quotes {
+    padding: 30px 10px;
+  }
+  .parent-testimonials p {
+    margin: 0 auto;
+    font-size: 16px;
+  }
+  .parent-testimonials .player-profile {
+    margin-top: 15px;
+  }
+  .cta-info h3 {
+    font-size: 24px;
+  }
+  .cta-bg-img {
+    margin-bottom: 20px;
+    padding: 30px 0;
+  }
+  .club-staff-info h2 {
+    margin-top: 20px;
+    font-size: 32px;
+  }
+  .club-staff-btm-sec {
+    margin-top: 30px;
+    flex-wrap: wrap;
+  }
+  .club-staff-btm-sec .btm-sec-item h2 {
+    margin: 0;
+  }
+  .club-staff-btm-sec .btm-sec-item {
+    justify-content: flex-start;
+    flex: 0 0 100%;
   }
 }
